@@ -229,7 +229,7 @@
 				  <property name="digits">1</property>
 				  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 				  <property name="inverted">False</property>
-				  <property name="adjustment">500 50 1510 10 10 0</property>
+				  <property name="adjustment">500 100 1510 10 10 0</property>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
