@@ -46,6 +46,7 @@
 #include "gnome-settings-screensaver.h"
 #include "gnome-settings-default-editor.h"
 #include "gnome-settings-keybindings.h"
+#include "gnome-settings-gtk1theme.h"
 
 #include "GNOME_SettingsDaemon.h"
 
@@ -241,6 +242,7 @@ gnome_settings_daemon_new (void)
   gnome_settings_default_editor_init (client);
   gnome_settings_background_init (client);
   gnome_settings_keybindings_init (client);
+  gnome_settings_gtk1_theme_init (client);
 
   for (list = directories; list; list = list->next)
     {
@@ -281,6 +283,7 @@ gnome_settings_daemon_new (void)
   gnome_settings_default_editor_load (client);
   gnome_settings_background_load (client);
   gnome_settings_keybindings_load (client);
+  gnome_settings_gtk1_theme_load (client);
 
   return G_OBJECT (daemon);
 }
