@@ -1,3 +1,8 @@
+2002-08-19  Jody Goldberg <jody@gnome.org>
+
+	* gnome-settings-daemon/gnome-settings-gtk1theme.c : new
+	  file from owen to manage gtk1 themes.
+
 2002-08-15  Jody Goldberg <jody@gnome.org>
 
 	* configure.in : set the version number to something sane
